logs/django-crawler.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/crawler'...
Compiling './lib/python3.5/site-packages/crawler/base.py'...
***   File "./lib/python3.5/site-packages/crawler/base.py", line 22
    except lxml.etree.ParseError, e:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/crawler/management'...
Listing './lib/python3.5/site-packages/crawler/management/commands'...
Compiling './lib/python3.5/site-packages/crawler/management/commands/crawl.py'...
***   File "./lib/python3.5/site-packages/crawler/management/commands/crawl.py", line 86
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/crawler/plugins'...
Compiling './lib/python3.5/site-packages/crawler/plugins/graph.py'...
***   File "./lib/python3.5/site-packages/crawler/plugins/graph.py", line 21
    print "Making graph of your URLs, this may take a while"
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/crawler/plugins/guppy_plugin.py'...
***   File "./lib/python3.5/site-packages/crawler/plugins/guppy_plugin.py", line 49
    key=lambda (k,v): (v,k),
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crawler/plugins/memory_plugin.py'...
***   File "./lib/python3.5/site-packages/crawler/plugins/memory_plugin.py", line 69
    alist = sorted(self.memory_urls.iteritems(), key=lambda (k,v): (v,k), reverse=True)
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crawler/plugins/sanitize.py'...
***   File "./lib/python3.5/site-packages/crawler/plugins/sanitize.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/crawler/plugins/time_plugin.py'...
***   File "./lib/python3.5/site-packages/crawler/plugins/time_plugin.py", line 31
    alist = sorted(self.timed_urls.iteritems(), key=lambda (k,v): (v,k), reverse=True)
                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_crawler-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
